apps/talos-home/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:10.11.11@sha256:aefb67e6a7ff1debdd154a78a7bbb780fd0c873d8639210a7f6a2016ad2b35db
        ports:
        - containerPort: 8096
          name: http
        - containerPort: 1900
          protocol: UDP
          name: dlna
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: cache
          mountPath: /cache
        resources:
          requests:
            memory: 1Gi
            cpu: 250m
          limits:
            memory: 4Gi
            cpu: "4"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: cache
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: ClusterIP              # changed from LoadBalancer
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    targetPort: 8096
  - name: dlna
    port: 1900
    targetPort: 1900
    protocol: UDP
