apps/talos-home/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.lan`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
